[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/BaseArena.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/Kenney_Assets/PNG/Backgrounds/colored_shroom.png" type="Texture" id=2]
[ext_resource path="res://asset/Kenney_Assets/DirtSet.sprites/DirtSet.res" type="TileSet" id=3]
[ext_resource path="res://scene/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/sound/Pump.ogg" type="AudioStream" id=5]
[ext_resource path="res://script/PausePopup.gd" type="Script" id=6]
[ext_resource path="res://asset/fonts/HighSquaresFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://asset/fonts/BlockFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://asset/sound/Lobby Time.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 22 )

[node name="Node2D" instance=ExtResource( 1 )]

[node name="colored_shroom" type="Sprite" parent="." index="2"]

position = Vector2( 640, 360 )
scale = Vector2( 1.25, 0.703125 )
texture = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="." index="3"]

scale = Vector2( 0.4, 0.4 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 720930, 15, 0, 720932, 2, 0, 720934, 2, 0, 720936, 2, 0, 720938, 2, 0, 720940, 2, 0, 720942, 17, 0, 786466, 5, 0, 786468, 5, 0, 786470, 5, 0, 786472, 5, 0, 786474, 5, 0, 786476, 5, 0, 786478, 5, 0, 852002, 5, 0, 917540, 5, 0, 917541, 5, 0, 917543, 5, 0, 917545, 5, 0, 917547, 5, 0, 917548, 5, 0, 917550, 5, 0, 983070, 15, 0, 983072, 2, 0, 983073, 2, 0, 983075, 5, 0, 1048606, 5, 0, 1048608, 5, 0, 1048609, 5, 0, 1048613, 5, 0, 1048615, 5, 0, 1048616, 5, 0, 1048618, 5, 0, 1048620, 5, 0, 1048622, 5, 0, 1114124, 15, 0, 1114126, 17, 0, 1114147, 5, 0, 1179660, 5, 0, 1179662, 5, 0, 1179673, 15, 0, 1179675, 16, 0, 1179677, 16, 0, 1179679, 5, 0, 1179681, 5, 0, 1179685, 5, 0, 1179687, 5, 0, 1179689, 5, 0, 1179691, 5, 0, 1179692, 5, 0, 1179694, 5, 0, 1245198, 5, 0, 1245219, 5, 0, 1310732, 5, 0, 1310745, 5, 0, 1310747, 5, 0, 1310749, 5, 0, 1310751, 5, 0, 1310753, 5, 0, 1310757, 5, 0, 1310759, 5, 0, 1310760, 5, 0, 1310762, 5, 0, 1310764, 5, 0, 1310766, 5, 0, 1376266, 7, 0, 1376268, 5, 0, 1376269, 5, 0, 1376271, 2, 0, 1376273, 2, 0, 1376275, 17, 0, 1376291, 5, 0, 1441807, 5, 0, 1441809, 5, 0, 1441811, 5, 0, 1441817, 5, 0, 1441819, 5, 0, 1441821, 5, 0, 1441823, 5, 0, 1441825, 5, 0, 1441827, 5, 0, 1441829, 5, 0, 1441831, 5, 0, 1441833, 5, 0, 1441835, 5, 0, 1441836, 5, 0, 1441838, 5, 0, 1507340, 5, 0, 1507341, 5, 0, 1572868, 7, 0, 1572870, 17, 0, 1572877, 5, 0, 1572879, 5, 0, 1572880, 5, 0, 1572882, 5, 0, 1572884, 16, 0, 1572886, 16, 0, 1572888, 16, 0, 1572890, 5, 0, 1572892, 5, 0, 1572893, 5, 0, 1572895, 5, 0, 1572897, 5, 0, 1572899, 5, 0, 1572901, 5, 0, 1572903, 5, 0, 1572904, 5, 0, 1572906, 5, 0, 1572908, 5, 0, 1572910, 5, 0, 1638412, 5, 0, 1703940, 6, 0, 1703942, 6, 0, 1703948, 5, 0, 1703949, 5, 0, 1703951, 5, 0, 1703952, 5, 0, 1703954, 5, 0, 1703956, 5, 0, 1703958, 5, 0, 1703960, 5, 0, 1703962, 5, 0, 1703964, 5, 0, 1703965, 5, 0, 1703967, 5, 0, 1703969, 5, 0, 1703970, 5, 0, 1703972, 5, 0, 1703974, 5, 0, 1703976, 5, 0, 1703978, 5, 0, 1703980, 5, 0, 1703982, 5, 0 )
_sections_unfolded = [ "Transform" ]

[node name="StaticBody2D2" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2" index="0"]

position = Vector2( 282.5, 544 )
scale = Vector2( 2.26923, 0.24 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D3" type="StaticBody2D" parent="." index="5"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3" index="0"]

position = Vector2( 1050, 291.5 )
scale = Vector2( 17.8462, 0.42 )
shape = SubResource( 1 )
one_way_collision = true
_sections_unfolded = [ "Transform" ]

[node name="StaticBody2D4" type="StaticBody2D" parent="." index="6"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4" index="0"]

position = Vector2( 153.5, 622.25 )
scale = Vector2( 4.96154, 0.289999 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D5" type="StaticBody2D" parent="." index="7"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5" index="0"]

position = Vector2( 588.5, 622 )
scale = Vector2( 7.57692, 0.32 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D6" type="StaticBody2D" parent="." index="8"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6" index="0"]

position = Vector2( 460.5, 549 )
scale = Vector2( 7.57692, 0.44 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D7" type="StaticBody2D" parent="." index="9"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D7" index="0"]

position = Vector2( 717, 470.5 )
scale = Vector2( 7.53846, 0.42 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D8" type="StaticBody2D" parent="." index="10"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D8" index="0"]

position = Vector2( 359, 445 )
scale = Vector2( 5, 0.4 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D9" type="StaticBody2D" parent="." index="11"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D9" index="0"]

position = Vector2( 833, 390 )
scale = Vector2( 6.30769, 0.28 )
shape = SubResource( 1 )
one_way_collision = true

[node name="player" parent="." index="12" instance=ExtResource( 4 )]

position = Vector2( 46, 685 )
scale = Vector2( 0.5, 0.5 )

[node name="MainGameMusic" type="AudioStreamPlayer2D" parent="." index="13"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="pause_popup" type="Popup" parent="." index="14"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = -2.0
margin_right = 2017.0
margin_bottom = 793.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
script = ExtResource( 6 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="WindowDialog" type="WindowDialog" parent="pause_popup" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 310.0
margin_top = 193.0
margin_right = 980.0
margin_bottom = 551.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_bottom = NodePath("Label2")
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "PAUSE"
resizable = false
_sections_unfolded = [ "Pause", "Rect" ]

[node name="Label" type="Label" parent="pause_popup/WindowDialog" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 52.0
margin_right = 671.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "GAME PAUSED"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Label2" type="Label" parent="pause_popup/WindowDialog" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 191.0
margin_right = 670.0
margin_bottom = 243.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
text = "Press ENTER to resume game"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="PauseMusic" type="AudioStreamPlayer" parent="pause_popup" index="1"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"


